fixed grid layout to improve spacing

--- a/style.css
+++ b/style.css
@@ -17,10 +17,27 @@ h1 {
     display: grid;
     gap: 10vh;
     grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: 1fr 2fr 1fr;
     padding: auto;
     margin: auto;
 }
-
+.center-high {
+    grid-column: 2;
+    grid-row: 1;
+}
+.center {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row: 2;
+}
+.center-low {
+    grid-column: 2;
+    grid-row: 3;
+}
+.scores {
+    grid-column: 2;
+    grid-row: 4;
+}
 .button {
     background-color: black;
     border-color:rgb(22, 22, 22);
@@ -33,4 +50,9 @@ h1 {
 }
 .button:hover {
     scale: 1.05;
+}
+.scores {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1;
 }
